--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
@@ -271,24 +271,18 @@
     </div>
     <div class="admin-panel-content-container">
         <div class="confirmation-section requires-confirmation" id="confirmation-section-master-content">
-            <div class="confirmation-section-title">
-                <h4>Master Content</h4>
-                <span>[<a target="_blank">Open in new tab</a>]</span>
-            </div>
-            <div class="content-preview">
-                <iframe src="about:blank"></iframe>
-            </div>
-            <div class="content-preview-pdf">
-                <object data="about:blank" type="application/pdf"></object>
-            </div>
-            <div class="content-preview-sandbox">
-                <iframe sandbox="allow-scripts allow-popups allow-modals allow-forms" src="about:blank"></iframe>
-            </div>
-            <div class="content-preview-download">
-                <a download>Click to download</a>
-            </div>
-            <div class="content-preview-none" style="display: none;">
-                <p>This file has not changed.</p>
+            <h4>Master Content</h4>
+            <div class="content-preview-container">
+                <iframe src="about:blank" class="content-preview"></iframe>
+                <object data="about:blank" type="application/pdf" class="content-preview-pdf"></object>
+                <iframe sandbox="allow-scripts allow-popups allow-modals allow-forms" src="about:blank" class="content-preview-sandbox"></iframe>
+                <a download class="content-preview-download">Click to download</a>
+                <p class="content-preview-none" style="display: none;">This file has not changed.</p>
+                <a class="new-tab-icon" target="_blank">
+                    <svg class="action-icon-expand-frame action-icon tooltip" title="Open in new tab">
+                        <use xlink:href="#expand-frame"></use>
+                    </svg>
+                </a>
             </div>
             <label for="confirmation-master-content" class="selection-option-label">
                 <input type="checkbox" name="master-content" value="confirmation-master-content" id="confirmation-master-content" class="selection-option-value requires-confirmation">
@@ -297,15 +291,15 @@
             </label>
         </div>
         <div class="confirmation-section requires-confirmation" id="confirmation-section-user-guide">
-            <div class="confirmation-section-title">
-                <h4>User Guide</h4>
-                <span>[<a target="_blank">Open in new tab</a>]</span>
-            </div>
-            <div class="content-preview">
-                <iframe src="about:blank"></iframe>
-            </div>
-            <div class="content-preview-none" style="display: none;">
-                <p>This file has not changed.</p>
+            <h4>User Guide</h4>
+            <div class="content-preview-container">
+                <iframe src="about:blank" class="content-preview"></iframe>
+                <p class="content-preview-none" style="display: none;">This file has not changed.</p>
+                <a class="new-tab-icon" target="_blank">
+                    <svg class="action-icon-expand-frame action-icon tooltip" title="Open in new tab">
+                        <use xlink:href="#expand-frame"></use>
+                    </svg>
+                </a>
             </div>
             <label for="confirmation-user-guide" class="selection-option-label">
                 <input type="checkbox" name="user-guide" value="confirmation-user-guide" id="confirmation-user-guide" class="selection-option-value requires-confirmation">
@@ -314,15 +308,15 @@
             </label>
         </div>
         <div class="confirmation-section requires-confirmation" id="confirmation-section-release-notes">
-            <div class="confirmation-section-title">
-                <h4>Release Notes</h4>
-                <span>[<a target="_blank">Open in new tab</a>]</span>
-            </div>
-            <div class="content-preview">
-                <iframe src="about:blank"></iframe>
-            </div>
-            <div class="content-preview-none" style="display: none;">
-                <p>This file has not changed.</p>
+            <h4>Release Notes</h4>
+            <div class="content-preview-container">
+                <iframe src="about:blank" class="content-preview"></iframe>
+                <p class="content-preview-none" style="display: none;">This file has not changed.</p>
+                <a class="new-tab-icon" target="_blank">
+                    <svg class="action-icon-expand-frame action-icon tooltip" title="Open in new tab">
+                        <use xlink:href="#expand-frame"></use>
+                    </svg>
+                </a>
             </div>
             <label for="confirmation-release-notes" class="selection-option-label">
                 <input type="checkbox" name="release-notes" value="confirmation-release-notes" id="confirmation-release-notes" class="selection-option-value requires-confirmation">
