--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/Login.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/Login.cshtml.template
@@ -7,7 +7,7 @@
 
 @{
     ViewData["Title"] = "Log in";
-    Layout = "_Layout";
+    Layout = "_Layout_w_F";
 }
 
 @section CSS {
@@ -21,33 +21,3 @@
     <script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
     <% } %>
 }
-
-<div id="login-wrapper">
-
-    <section id="login-container">
-        <div id="login-form-container">
-            <div id="login-logo-container">
-                <svg id="login-logo" alt="Milliman Access Portal">
-                    <use xlink:href="#map-logo"></use>
-                </svg>
-            </div>
-            <form id="login-form" autocomplete="off" asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <div class="login-form-input-container">
-                    <input asp-for="Username" id="username" placeholder="Username" autofocus>
-                    <span asp-validation-for="Username" class="text-danger"></span>
-                </div>
-                <div class="login-form-input-container">
-                    <input asp-for="Password" id="password" placeholder="Password">
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="login-form-button-container">
-                    <a asp-action="ForgotPassword" class="link-button">Forgot Password</a>
-                    <button type="submit" class="blue-button">Login</button>
-                </div>
-            </form>
-        </div>
-    </section>
-
-    @Html.Partial("_Footer")
-</div>
