--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/EnableAccount.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/EnableAccount.cshtml.template
@@ -106,7 +106,7 @@
                         </div>
                         <div class="form-submission-section">
                             <div class="button-container button-container-update">
-                                <button type="submit" class="button-submit blue-button">Activate Account</button>
+                                <button type="submit" disabled="disabled" class="button-submit blue-button">Activate Account</button>
                             </div>
                         </div>
                         <div class="form-antiforgery-token" style="display: none;">
