--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -5,6 +5,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "bootstrap": "4.1.3",
+    "joi-browser": "^13.4.0",
     "jquery": "3.3.1",
     "jquery-mask-plugin": "1.14.15",
     "jquery-validation": "<1.18",
