--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -14,10 +14,12 @@
     "node-forge": "^0.7.5",
     "popper.js": "^1.14.1",
     "promise-polyfill": "8.1.0",
+    "prop-types": "^15.6.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-modal": "^3.5.1",
     "react-redux": "^5.1.0",
+    "react-redux-toastr": "^7.4.6",
     "react-select": "^2.1.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2",
@@ -42,6 +44,7 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-modal": "^3.2.1",
     "@types/react-redux": "^6.0.9",
+    "@types/react-redux-toastr": "^7.4.1",
     "@types/react-select": "^2.0.7",
     "@types/selectize": "^0.12.33",
     "@types/toastr": "^2.1.35",
