--- a/MillimanAccessPortal/MillimanAccessPortal/tsconfig.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/tsconfig.json
@@ -7,7 +7,7 @@
       "es5",
       "scripthost"
     ],
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es5",
