--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -65,7 +65,8 @@
     "testcafe": "^0.23.0",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.2.2",
-    "tslint": "^5.10.0",
+    "tslint": "^5.12.1",
+    "tslint-loader": "^3.5.4",
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.3",
     "webpack": "^4.20.2",
