--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -5,7 +5,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "bootstrap": "4.1.3",
-    "joi-browser": "^13.4.0",
+    "joi": "^14.3.1",
     "jquery": "3.3.1",
     "jquery-mask-plugin": "1.14.15",
     "jquery-validation": "<1.18",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.8",
+    "@types/joi": "^14.3.0",
     "@types/jquery": "^3.3.1",
     "@types/jquery-mask-plugin": "^1.14.3",
     "@types/jquery-validation-unobtrusive": "^3.2.32",
