Add instrumentation key appsettings placeholder

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey":  ""
+  },
   "AzureVaultName": "",
   "ConnectionStrings": {
     "AuditLogConnectionString": "",
