--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -5,7 +5,6 @@
   "license": "UNLICENSED",
   "dependencies": {
     "bootstrap": "4.1.3",
-    "joi": "^14.3.1",
     "jquery": "3.3.1",
     "jquery-mask-plugin": "1.14.15",
     "jquery-validation": "<1.18",
@@ -23,11 +22,11 @@
     "tooltipster": "4.2.6",
     "typeahead.js": "v0.11.1",
     "vex-js": "v4.1.0",
-    "whatwg-fetch": "3.0.0"
+    "whatwg-fetch": "3.0.0",
+    "yup": "^0.26.10"
   },
   "devDependencies": {
     "@types/jest": "^23.3.8",
-    "@types/joi": "^14.3.0",
     "@types/jquery": "^3.3.1",
     "@types/jquery-mask-plugin": "^1.14.3",
     "@types/jquery-validation-unobtrusive": "^3.2.32",
@@ -44,6 +43,7 @@
     "@types/typeahead": "^0.11.32",
     "@types/vex-js": "^2.3.29",
     "@types/webpack-env": "^1.13.5",
+    "@types/yup": "^0.26.7",
     "aspnet-webpack": "^3.0.0",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^0.1.19",
