--- a/MillimanAccessPortal/MillimanAccessPortal/tsconfig.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/tsconfig.json
@@ -11,7 +11,7 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es5",
-    "outDir": "src/js",
+    "outDir": "src/ts-compiled",
     "module": "commonjs",
     "allowSyntheticDefaultImports": true,
     "jsx": "react"
