--- a/MillimanAccessPortal/MillimanAccessPortal/MillimanAccessPortal.csproj
+++ b/MillimanAccessPortal/MillimanAccessPortal/MillimanAccessPortal.csproj
@@ -130,6 +130,9 @@
       <DependentUpon>BuildTimeProperties.tt</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
+  </ItemGroup>
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="cd ..\..\Documentation&#xD;&#xA;CompileUserDocs.bat" />
   </Target>
