--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/Login.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/Login.cshtml.template
@@ -14,7 +14,7 @@
 
 <div id="content-wrapper">
 </div>
-@Html.Partial("_Footer")
+@Html.PartialAsync("_Footer")
 
 @section CSS {
   <% for (var css in htmlWebpackPlugin.files.css) { %>
