--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ClientAdmin/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ClientAdmin/Index.cshtml.template
@@ -21,7 +21,7 @@
 <div id="navbar"></div>
 <div id="client-tree" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-4-12 flex-item-for-desktop-up-3-12">
     <div class="loading-wrapper" style="display: none;">
-        @Html.Partial("~/Views/Shared/_Loader.cshtml")
+        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Client Tree</h3>
     <div class="admin-panel-toolbar">
@@ -39,7 +39,7 @@
 </div>
 <div id="client-info" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-4-12 flex-item-for-desktop-up-6-12" style="display: none;">
     <div class="loading-wrapper" style="display: none;">
-        @Html.Partial("~/Views/Shared/_Loader.cshtml")
+        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Client Information</h3>
     <div class="admin-panel-toolbar">
@@ -200,7 +200,7 @@
 </div>
 <div id="client-users" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-4-12 flex-item-for-desktop-up-3-12" style="display: none;">
     <div class="loading-wrapper" style="display: none;">
-        @Html.Partial("~/Views/Shared/_Loader.cshtml")
+        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Client Users</h3>
     <div class="admin-panel-toolbar">
