--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
@@ -234,6 +234,12 @@
                                 <textarea id="Notes" name="Notes" for="Notes"></textarea>
                             </div>
                         </div>
+                        <div class="form-input form-input-textarea flex-item-12-12">
+                            <label class="form-input-textarea-title" for="ContentDisclaimer">Content Disclaimer</label>
+                            <div class="form-input-textarea-contents">
+                                <textarea id="ContentDisclaimer" name="ContentDisclaimer" for="ContentDisclaimer" placeholder="There is no disclaimer for this content."></textarea>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-submission-section">
