--- a/MillimanAccessPortal/EmailQueue/EmailQueue.csproj
+++ b/MillimanAccessPortal/EmailQueue/EmailQueue.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MailKit" Version="1.18.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
+    <PackageReference Include="Serilog" Version="2.8.0" />
   </ItemGroup>
 
 </Project>
