--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentAccessAdmin/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentAccessAdmin/Index.cshtml.template
@@ -27,7 +27,7 @@
 <div id="navbar"></div>
 <div id="client-tree" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-3-12">
     <div class="loading-wrapper">
-        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
+        @await Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Client Tree</h3>
     <div class="admin-panel-toolbar">
@@ -41,7 +41,7 @@
 </div>
 <div id="root-content-items" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-3-12" style="display: none;">
     <div class="loading-wrapper">
-        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
+        @await Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Content Items</h3>
     <div class="admin-panel-toolbar">
@@ -55,7 +55,7 @@
 </div>
 <div id="selection-groups" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-3-12" style="display: none;">
     <div class="loading-wrapper">
-        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
+        @await Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Selection Groups</h3>
     <div class="admin-panel-toolbar">
@@ -79,7 +79,7 @@
 </div>
 <div id="selection-info" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-3-12" style="display: none;">
     <div class="loading-wrapper">
-        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
+        @await Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Selections</h3>
     <div class="admin-panel-toolbar">
