--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
@@ -27,7 +27,7 @@
 <div id="navbar"></div>
 <div id="client-tree" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-3-12">
     <div class="loading-wrapper">
-        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
+        @await Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Client Tree</h3>
     <div class="admin-panel-toolbar">
@@ -41,7 +41,7 @@
 </div>
 <div id="root-content-items" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-3-12" style="display: none;">
     <div class="loading-wrapper">
-        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
+        @await Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Content Items</h3>
     <div class="admin-panel-toolbar">
@@ -59,7 +59,7 @@
 </div>
 <div id="content-publishing-form" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-6-12" style="display: none;">
     <div class="loading-wrapper" style="display: none;">
-        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
+        @await Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Content Item</h3>
     <div class="admin-panel-toolbar">
@@ -259,7 +259,7 @@
 </div>
 <div id="report-confirmation" class="admin-panel-container flex-item-12-12 flex-item-for-tablet-up-6-12" style="display: none;">
     <div class="loading-wrapper" style="display: none;">
-        @Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
+        @await Html.PartialAsync("~/Views/Shared/_Loader.cshtml")
     </div>
     <h3 class="admin-panel-header">Report Confirmation</h3>
     <div class="admin-panel-toolbar">
