Use Verbose logging by default in Staging

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.Staging.json
@@ -7,7 +7,7 @@
     "QvSourceDocumentsPath": "\\\\map-fs-01\\staging\\reducing\\QVP"
   },
   "Serilog": {
-    "MinimumLevel": "Debug",
+    "MinimumLevel": "Verbose",
     "WriteTo": [
       {
         "Name": "Console",
