--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
@@ -1,4 +1,4 @@
-@model MillimanAccessPortal.Models.AuthorizedContentViewModels.ContentDisclaimer
+@model MillimanAccessPortal.Models.AuthorizedContentViewModels.ContentDisclaimerModel
 
 @{
     ViewData["Title"] = "Content Disclaimer";
@@ -13,18 +13,18 @@
 }
 
 <div id="disclaimer-container">
-	<h2 id="content-name">Legal Disclaimer: @Model.ContentName</h2>
-	<div id="content-disclaimer-text">
-		@Model.DisclaimerText
-	</div>
-	<form id="content-disclaimer-form">
-		<input asp-for="SelectionGroupId" style="visibility: hidden;">
-		<input asp-for="ValidationId" style="visibility: hidden;">
-		@Html.AntiForgeryToken()
-		<div class="button-container">
-			<button id="accept-button" type="button" class="green-button">Accept</button>
-		</div>
-	</form>
+  <h2 id="content-name">Legal Disclaimer: @Model.ContentName</h2>
+  <div id="content-disclaimer-text">
+    @Model.DisclaimerText
+  </div>
+  <form id="content-disclaimer-form">
+    <input asp-for="SelectionGroupId" style="visibility: hidden;">
+    <input asp-for="ValidationId" style="visibility: hidden;">
+    @Html.AntiForgeryToken()
+    <div class="button-container">
+      <button id="accept-button" type="button" class="green-button">Accept</button>
+    </div>
+  </form>
 </div>
 
 @section Scripts {
