All projects will use latest minor compiler version.

--- a/ContentPublishingServer/ContentPublishingServiceTests/ContentPublishingServiceTests.csproj
+++ b/ContentPublishingServer/ContentPublishingServiceTests/ContentPublishingServiceTests.csproj
@@ -10,6 +10,8 @@
     <Authors>Milliman PRM Analytics Team</Authors>
 
     <Company>Milliman Inc.</Company>
+
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
