--- a/ContentPublishingServer/ContentPublishingLib/ContentPublishingLib.csproj
+++ b/ContentPublishingServer/ContentPublishingLib/ContentPublishingLib.csproj
@@ -9,6 +9,7 @@
     <Version>1.3.6</Version>
     <Authors>Milliman PRM Analytics Team</Authors>
     <Company>Milliman Inc.</Company>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
