--- a/MillimanAccessPortal/EmailQueue/EmailQueue.csproj
+++ b/MillimanAccessPortal/EmailQueue/EmailQueue.csproj
@@ -5,6 +5,7 @@
     <Authors>Milliman PRM Analytics Team</Authors>
     <Company>Milliman Inc.</Company>
     <Version>1.3.6</Version>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
