--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentWrapper.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentWrapper.cshtml.template
@@ -6,6 +6,12 @@
     ViewData["NavIcon"] = "";
 }
 
+@section CSS {
+  <% for (var css in htmlWebpackPlugin.files.css) { %>
+  <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
+  <% } %>
+}
+
 <div id="content-url" style="display: none;">@Model.ContentURL</div>
 <div id="content-type" style="display: none;">@Model.ContentType</div>
 <div id="content-wrapper"></div>
