Settle on "Disclaimer"
Standardize on "Disclaimer" rather than Legal Disclaimer or Content Disclaimer.

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ContentPublishing/Index.cshtml.template
@@ -235,7 +235,7 @@
                             </div>
                         </div>
                         <div class="form-input form-input-textarea flex-item-12-12">
-                            <label class="form-input-textarea-title" for="ContentDisclaimer">Content Disclaimer</label>
+                            <label class="form-input-textarea-title" for="ContentDisclaimer">Custom Disclaimer Text</label>
                             <div class="form-input-textarea-contents">
                                 <textarea id="ContentDisclaimer" name="ContentDisclaimer" for="ContentDisclaimer" placeholder="There is no disclaimer for this content."></textarea>
                             </div>
