--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
@@ -12,7 +12,7 @@
 }
 
 <div id="disclaimer-container">
-  <h2 id="content-name">Disclaimer: @Model.ContentName</h2>
+  <h2 id="content-name">Legal Disclaimer: @Model.ContentName</h2>
   <div id="content-disclaimer-text">
     @Model.DisclaimerText
   </div>
