--- a/User Stats/MAPStatsLoader/MAPStatsLoader.csproj
+++ b/User Stats/MAPStatsLoader/MAPStatsLoader.csproj
@@ -4,7 +4,9 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24"/>
+    <PackageReference Include="Npgsql" Version="4.0.5"/>
+    <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.3"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
