--- a/User Stats/MAPStatsLoader/MAPStatsLoader.csproj
+++ b/User Stats/MAPStatsLoader/MAPStatsLoader.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24"/>
     <PackageReference Include="Npgsql" Version="4.0.5"/>
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.3"/>
+    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.0.3"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
