--- a/User Stats/MAPStatsLoader/prod.settings.json
+++ b/User Stats/MAPStatsLoader/prod.settings.json
@@ -3,6 +3,7 @@
     "Values": {
         "AzureWebJobsStorage": "",
         "FUNCTIONS_WORKER_RUNTIME": "dotnet",
-        "ConnectionStringVaultUrl": "https://map-prod-vault.vault.azure.net/secrets/ConnectionStrings--UserStatsConnection/"
+        "ConnectionStringVaultUrl": "https://map-prod-vault.vault.azure.net/secrets/ConnectionStrings--UserStatsConnection/",
+        "EtlScriptPath": "D:\\home\\site\\wwwroot\\etl.sql"
     }
 }
