--- a/User Stats/MAPStatsLoader/MAPStatsLoader.csproj
+++ b/User Stats/MAPStatsLoader/MAPStatsLoader.csproj
@@ -27,7 +27,7 @@
     </None>
     <None Update="prod.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
   </ItemGroup>
 </Project>
