--- a/User Stats/MAPStatsLoader/MAPStatsLoader.csproj
+++ b/User Stats/MAPStatsLoader/MAPStatsLoader.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Npgsql" Version="4.0.5"/>
     <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.3"/>
     <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.0.3"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0"/>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -23,7 +24,7 @@
     </None>
     <None Update="local.secrets.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
     <None Update="prod.settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
