--- a/MillimanAccessPortal/TestResourcesLib/TestResourcesLib.csproj
+++ b/MillimanAccessPortal/TestResourcesLib/TestResourcesLib.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.WsFederation" Version="2.2.0" />
     <PackageReference Include="Moq" Version="4.10.1" />
   </ItemGroup>
 
