Migrate .Result to async/await, many code structure adjustments. WIP

--- a/ContentPublishingServer/PowerBILibSample/PowerBILibSample.csproj
+++ b/ContentPublishingServer/PowerBILibSample/PowerBILibSample.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Authors>Milliman PRM Analytics Team</Authors>
+    <Company>Milliman Inc.</Company>
+    <Version>1.5.0</Version>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
