--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
@@ -25,7 +25,7 @@
 
 <div id="reset-password-container">
     <div id="reset-password" class="admin-panel-container flex-item-for-phone-only-12-12 flex-item-for-tablet-up-10-12 flex-item-for-desktop-up-5-12">
-        <div class="admin-panel-content-container">
+        <div class="form-content-container">
             <form id="reset-password-form" autocomplete="off" class="admin-panel-content" autocomplete="off" action="ResetPassword" method="post">
                 <div class="form-section-container">
                     <div class="form-section" data-section="hidden">
