Log the running assembly at launch.

--- a/ContentPublishingServer/ContentPublishingService/appSettings.json
+++ b/ContentPublishingServer/ContentPublishingService/appSettings.json
@@ -1,5 +1,7 @@
 {
   "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=MillimanAccessPortalWithGuids;User Id=postgres;Password=postgres;",
+    "AuditLogConnectionString": "Server=localhost;Database=MapAuditLog;User Id=postgres;Password=postgres;"
   },
   "Storage": {
   },
