style the message container for forgot password
so that they aren't in individual containers

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/Message.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Shared/Message.cshtml.template
@@ -18,13 +18,10 @@
 }
 
 <div id="message-container">
-    <h3>
+    <h3 class="primary-message">
         @Html.Raw(@Model)
     </h3>
-</div>
-
-<div id="message-container">
-    <h3>
+    <h3 class="secondary-message">
         @Html.ActionLink("OK", "Index", "AuthorizedContent")
     </h3>
 </div>
