--- a/MillimanAccessPortal/MillimanAccessPortal/package.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.22.2",
     "node-forge": "^0.7.5",
     "popper.js": "^1.14.1",
+    "prop-types": "^15.5.7",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-modal": "^3.5.1",
