try to get the lines to wrap properly

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
@@ -54,7 +54,7 @@
                                     <div class="form-section">
                                         <div class="form-input-container">
                                             <div class="flex-item-12-12">
-                                                <span class="form-validation-error">@Model.Message</span>
+                                                <div class="form-validation-error">@Model.Message</div>
                                             </div>
                                         </div>
                                     </div>
