--- a/MillimanAccessPortal/PowerBILib/PowerBILib.csproj
+++ b/MillimanAccessPortal/PowerBILib/PowerBILib.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MapCommonLib\MapCommonLib.csproj" />
+    <ProjectReference Include="..\MapDbContextLib\MapDbContextLib.csproj" />
   </ItemGroup>
 
 </Project>
