--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
@@ -11,6 +11,11 @@
     Layout = "_Layout_w_H_F";
 }
 
+@Html.AntiForgeryToken()
+ 
+<div id="content-container">
+</div>
+
 @section CSS {
   <% for (var css in htmlWebpackPlugin.files.css) { %>
   <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
