set up the hidden input values
to use the password reset token and antiforgery token along with the email

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
@@ -11,6 +11,10 @@
     Layout = "_Layout_w_H_F";
 }
 
+@Html.AntiForgeryToken();
+<input name="Email" type="hidden" value="@Model.Email" />
+<input name="PasswordResetToken" type="hidden" value="@Model.PasswordResetToken" />
+
 <div id="content-container">
 </div>
 
