Fix some issues
This should get this closer.

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
@@ -12,8 +12,8 @@
 }
 
 @Html.AntiForgeryToken();
-<input name="Email" type="hidden" value="@Model.Email" />
-<input name="PasswordResetToken" type="hidden" value="@Model.PasswordResetToken" />
+<input name="__Email" type="hidden" value="@Model.Email" />
+<input name="__PasswordResetToken" type="hidden" value="@Model.PasswordResetToken" />
 
 <div id="content-container">
 </div>
