--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/ResetPassword.cshtml.template
@@ -11,7 +11,7 @@
     Layout = "_Layout_w_H_F";
 }
 
-@Html.AntiForgeryToken();
+@Html.AntiForgeryToken()
 <input name="__Email" type="hidden" value="@Model.Email" />
 <input name="__PasswordResetToken" type="hidden" value="@Model.PasswordResetToken" />
 
