--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ClientAdmin/Index.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/ClientAdmin/Index.cshtml.template
@@ -32,7 +32,7 @@
             </svg>
         </div>
     </div>
-    <div class="form-content-container">
+    <div class="admin-panel-content-container">
         <ul class="admin-panel-content">
         </ul>
     </div>
@@ -52,7 +52,7 @@
             </svg>
         </div>
     </div>
-    <div class="form-content-container">
+    <div class="admin-panel-content-container">
         <form class="admin-panel-content form-disabled">
             <div class="form-section-container">
                 <div class="form-section">
@@ -217,7 +217,7 @@
             </svg>
         </div>
     </div>
-    <div class="form-content-container">
+    <div class="admin-panel-content-container">
         <ul class="admin-panel-content"></ul>
     </div>
 </div>
