--- a/MillimanAccessPortal/MapTests/appsettings.CI.json
+++ b/MillimanAccessPortal/MapTests/appsettings.CI.json
@@ -1,9 +1,9 @@
 ﻿{
   "Storage": {
-    "FileUploadPath": "\\\\indy-syn01\\prm_test\\Uploads",
-    "ContentItemRootPath": "\\\\indy-syn01\\prm_test\\ContentRoot",
-    "MapPublishingServerExchangePath": "\\\\indy-syn01\\prm_test\\MapPublishingServerExchange",
-    "QvSourceDocumentsPath": "\\\\indy-syn01\\prm_test\\MillimanSourceDocuments"
+    "FileUploadPath": "\\\\indy-syn01.milliman.com\\prm_test\\Uploads",
+    "ContentItemRootPath": "\\\\indy-syn01.milliman.com\\prm_test\\ContentRoot",
+    "MapPublishingServerExchangePath": "\\\\indy-syn01.milliman.com\\prm_test\\MapPublishingServerExchange",
+    "QvSourceDocumentsPath": "\\\\indy-syn01.milliman.com\\prm_test\\MillimanSourceDocuments"
   },
   "QvServerContentUriSubfolder": ""
 }
