Validate domain list count on EditClient

--- a/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
+++ b/MillimanAccessPortal/MillimanAccessPortal/appsettings.json
@@ -49,7 +49,8 @@
     "DefaultNewUserWelcomeText": "Welcome to Milliman Access Portal!\r\n\r\nAn account has been created for you in Milliman Access Portal (MAP). MAP will allow you to securely access your Milliman content online.",
     "DefaultPasswordResetEmailText": "A password reset request has been received for your Milliman Access Portal account.",
     "ErrorMessageTemplate": "An error occured. Please contact <a href=\"mailto:map.support@milliman.com?subject={0}\">map.support@milliman.com</a> for assistance.",
-    "ClientDomainListCountLimit": 3
+    "ClientDomainListCountLimit": 3,
+    "NonLimitedDomains":  "milliman.com"  // Separate multiple domains with ';'
   },
   "SupportEmailAddress": "support.78832.5ad4ee0bf11242a6@helpscout.net",
   "PasswordExpirationDays": "60",
