New ViewModel for UserAgreement

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
@@ -1,4 +1,4 @@
-@model MillimanAccessPortal.Models.AuthorizedContentViewModels.ContentDisclaimerModel
+@model MillimanAccessPortal.Models.AccountViewModels.UserAgreementViewModel
 
 @{
     ViewData["Title"] = "";
