--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
@@ -13,8 +13,10 @@
 
 <div id="disclaimer-container">
   <h2 id="content-name">Disclaimer: @Model.ContentName</h2>
-  <div id="content-disclaimer-text">
+  <div id="raw-markdown" style="display: none">
     @Model.DisclaimerText
+  </div>
+  <div id="content-disclaimer-text">
   </div>
   <form id="content-disclaimer-form">
     <input asp-for="SelectionGroupId" style="visibility: hidden;">
