Add some acceptance language to every form

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
@@ -22,6 +22,7 @@
     <input asp-for="SelectionGroupId" style="visibility: hidden;">
     <input asp-for="ValidationId" style="visibility: hidden;">
     @Html.AntiForgeryToken()
+	<span id="content-disclaimer-acceptance">By clicking the "Accept" button below, You are acknowledging that you have read and accept the terms presented above.</span>
     <div class="button-container">
       <button id="accept-button" type="button" class="green-button">Accept</button>
     </div>
