change naming from content-disclaimer to disclaimer
more general name so they can be reused

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
@@ -16,13 +16,13 @@
   <div id="raw-markdown" style="display: none">
     @Model.DisclaimerText
   </div>
-  <div id="content-disclaimer-text">
+  <div id="disclaimer-text">
   </div>
-  <form id="content-disclaimer-form">
+  <form id="disclaimer-form">
     <input asp-for="SelectionGroupId" style="visibility: hidden;">
     <input asp-for="ValidationId" style="visibility: hidden;">
     @Html.AntiForgeryToken()
-	<span id="content-disclaimer-acceptance">By clicking the "Accept" button below, You are acknowledging that you have read and accept the terms presented above.</span>
+	<span id="disclaimer-acceptance">By clicking the "Accept" button below, You are acknowledging that you have read and accept the terms presented above.</span>
     <div class="button-container">
       <button id="accept-button" type="button" class="green-button">Accept</button>
     </div>
