Make the button light up when scrolling to the bottom
Pull this functionality out to enable it on the content disclaimer as well.

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
@@ -23,7 +23,7 @@
   <form id="content-disclaimer-form">
     @Html.AntiForgeryToken()
     <div class="button-container">
-      <button id="accept-button" type="button" class="green-button" >Accept</button>
+      <button id="accept-button" type="button" class="green-button" disabled>Accept</button>
     </div>
   </form>
 </div>
