Enable the accept button on scroll in the content disclaimer

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/AuthorizedContent/ContentDisclaimer.cshtml.template
@@ -24,7 +24,7 @@
     @Html.AntiForgeryToken()
 	<span id="content-disclaimer-acceptance">By clicking the "Accept" button below, You are acknowledging that you have read and accept the terms presented above.</span>
     <div class="button-container">
-      <button id="accept-button" type="button" class="green-button">Accept</button>
+      <button id="accept-button" type="button" class="green-button" disabled>Accept</button>
     </div>
   </form>
 </div>
