Update the language on the User Agreement prompt

--- a/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
+++ b/MillimanAccessPortal/MillimanAccessPortal/ViewTemplates/Account/UserAgreement.cshtml.template
@@ -15,7 +15,11 @@
 	@Html.Hidden("ReturnUrl", Model.ReturnUrl)
   <h2 id="content-name">User Agreement</h2>
 	 @Html.Hidden("IsRenewal", Model.IsRenewal)
-  <p>@(Model.IsRenewal ? "An updated user agreement must be signed" : "A user agreement must be signed")</p>
+  <p>
+	@(Model.IsRenewal ? 
+	"Our Terms and Conditions have changed.  Please review and accept the updated Terms." : 
+	"Please review and accept our Terms and Conditions.")
+  </p>
   <div id="content-disclaimer-text">
 	@Html.Hidden("AgreementText", Model.AgreementText)
     @Model.AgreementText
